--- a/k8s/inventory-service/deployment.yaml
+++ b/k8s/inventory-service/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: inventory-service
-          image: brunoiglesias757/inventory-service:latest
+          image: 537272127148.dkr.ecr.us-east-1.amazonaws.com/inventory-service:latest
           ports:
             - containerPort: 8002
           env:
@@ -22,3 +22,4 @@ spec:
               value: "postgres://admin:admin123@postgres:5432/microservices_db?sslmode=disable"
             - name: REDIS_URL
               value: "redis:6379"
+
