--- a/k8s/product-service/deployment.yaml
+++ b/k8s/product-service/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: product-service
-          image: brunoiglesias757/product-service:latest
+          image: 537272127148.dkr.ecr.us-east-1.amazonaws.com/product-service:latest
           ports:
             - containerPort: 8001
           env:
@@ -22,3 +22,4 @@ spec:
               value: "postgresql://admin:admin123@postgres:5432/microservices_db"
             - name: REDIS_URL
               value: "redis:6379"
+
