--- a/.github/workflows/CI-Frontend.yml
+++ b/.github/workflows/CI-Frontend.yml
@@ -1,1 +1,56 @@
+name: CI - Build & Push Frontend to ECR
 
+on:
+  push:
+    branches:
+      - "main"
+  workflow_dispatch:
+
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout current repo
+        uses: actions/checkout@v4
+
+      # -------------------------
+      # CLONAR FRONTEND (API GATEWAY)
+      # -------------------------
+      - name: Clonar Frontend (API Gateway)
+        run: git clone https://x-access-token:${{ secrets.GH_TOKEN }}@https://github.com/DevOpsObligatorio/DevOpsFront.git api-gateway
+
+      # -------------------------
+      # AWS - LOGIN EN ECR
+      # -------------------------
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+
+      # -------------------------
+      # BUILD FRONTEND IMAGE
+      # -------------------------
+      - name: Build Frontend image
+        run: docker build -t api-gateway ./api-gateway
+
+      - name: Tag Frontend image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: api-gateway
+          IMAGE_TAG: latest
+        run: docker tag api-gateway:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+      - name: Push Frontend image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: api-gateway
+          IMAGE_TAG: latest
+        run: docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
