--- a/.github/workflows/CI-Frontend.yml
+++ b/.github/workflows/CI-Frontend.yml
@@ -18,7 +18,7 @@ jobs:
       # CLONAR FRONTEND (API GATEWAY)
       # -------------------------
       - name: Clonar Frontend (API Gateway)
-        run: git clone https://x-access-token:${{ secrets.GH_TOKEN }}@https://github.com/DevOpsObligatorio/DevOpsFront.git api-gateway
+        run: git clone https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/DevOpsObligatorio/DevOpsFront.git api-gateway
 
       # -------------------------
       # AWS - LOGIN EN ECR
