--- a/k8s/postgres/pvc.yaml
+++ b/k8s/postgres/pvc.yaml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
+  namespace: microservices
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 2Gi
-storageClassName: gp2
+  storageClassName: gp2
+
+
 
