--- a/k8s/redis/pvc.yaml
+++ b/k8s/redis/pvc.yaml
@@ -2,10 +2,13 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: redis-pvc
+  namespace: microservices
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
-storageClassName: gp2
+  storageClassName: gp2
+
+
