--- a/k8s/postgres/storageclass.yaml
+++ b/k8s/postgres/storageclass.yaml
@@ -4,7 +4,7 @@ metadata:
   name: gp2
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
-provisioner: kubernetes.io/aws-ebs
+provisioner: aws-ebs
 parameters:
   type: gp2
   fsType: ext4
