--- a/k8s/ingress/ingress.yaml
+++ b/k8s/ingress/ingress.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: microservices
   annotations:
     kubernetes.io/ingress.class: alb
+    alb.ingress.kubernetes.io/scheme: internet-facing  
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
 spec:
   rules:
     - http:
@@ -16,6 +19,7 @@ spec:
                 name: api-gateway
                 port:
                   number: 8000
+
 
 
 
