--- a/k8s/product-service/deployment.yaml
+++ b/k8s/product-service/deployment.yaml
@@ -21,6 +21,7 @@ spec:
             - name: DATABASE_URL
               value: "postgresql://admin:admin123@postgres:5432/microservices_db"
             - name: REDIS_URL
-              value: "redis:6379"
+              value: "redis://redis:6379"
+
 
 
