--- a/.github/workflows/CD-Backend.yml
+++ b/.github/workflows/CD-Backend.yml
@@ -48,7 +48,8 @@ jobs:
       # ------------------------
       - name: Apply specific manifests
         run: |
-          kubectl apply -n microservices -f k8s/inventory-service
-          kubectl apply -n microservices -f k8s/postgres
-          kubectl apply -n microservices -f k8s/product-service
           kubectl apply -n microservices -f k8s/redis
+          kubectl apply -n microservices -f k8s/postgres
+          kubectl apply -n microservices -f k8s/inventory-service
+          kubectl apply -n microservices -f k8s/product-service 
+          kubectl apply -n microservices -f k8s/ingress
