--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -7,6 +7,8 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin123
       POSTGRES_DB: microservices_db
+    volumes:
+      - ./db-init:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
     healthcheck:
