--- a/.github/workflows/CD-Backend.yml
+++ b/.github/workflows/CD-Backend.yml
@@ -2,7 +2,7 @@ name: CD - Deploy to EKS
 
 on:
   workflow_run:
-    workflows: ["CI - Build & Push Product & Inventory to ECR"]
+    workflows: ["CI - Build, Test & Push Product & Inventory to ECR"]
     types:
       - completed
 
