--- a/.github/workflows/CD-Backend.yml
+++ b/.github/workflows/CD-Backend.yml
@@ -55,17 +55,13 @@ jobs:
           kubectl apply -n microservices -f k8s/inventory-service
           kubectl apply -n microservices -f k8s/product-service
 
-      #------------------------
-      #NOTIFICACIÓN CON LAMBDA
-      #------------------------
-      - name: Crear payload válido
-        run: |
-          # Usar jq para generar JSON válido sin BOM
-          jq -n --arg msg "El pipeline terminó con éxito" '{"message": $msg}' > payload.json# Verificar el contenido
-          cat payload.json
-      
+     # ------------------------
+     # NOTIFICACIÓN CON LAMBDA
+     # ------------------------
       - name: Notificar Lambda
         run: |
-          aws lambda invoke \--function-name pipeline-notify-default \--invocation-type RequestResponse \--payload fileb://payload.json \--cli-binary-format raw-in-base64-out \
-          response.json && \
-          cat response.json
+          aws lambda invoke \
+          --function-name pipeline-notify-default \
+          --invocation-type RequestResponse \
+          --payload '{"message": "El pipeline termino con exito"}' \
+          response.json
