--- a/.github/workflows/CD-Backend.yml
+++ b/.github/workflows/CD-Backend.yml
@@ -54,14 +54,15 @@ jobs:
           kubectl apply -n microservices -f k8s/postgres
           kubectl apply -n microservices -f k8s/inventory-service
           kubectl apply -n microservices -f k8s/product-service
-
-     # ------------------------
-     # NOTIFICACIÓN CON LAMBDA
-     # ------------------------
+        
+      # ------------------------
+      # NOTIFICACIÓN CON LAMBDA
+      # ------------------------
       - name: Notificar Lambda
         run: |
           aws lambda invoke \
           --function-name pipeline-notify-default \
           --invocation-type RequestResponse \
-          --payload '{"message": "El pipeline termino con exito"}' \
+          --payload '{"message":"El pipeline termino con exito"}' \
+          --cli-binary-format raw-in-base64-out \
           response.json
