--- a/.github/workflows/CI-Backend.yml
+++ b/.github/workflows/CI-Backend.yml
@@ -1,14 +1,20 @@
 name: CI - Build, Test & Push Product & Inventory to ECR
 
-on: 
+on:
   push:
     branches: 
       - "main"
+      - "dev"
+      - "test"
   workflow_dispatch:
 
 jobs:
   build-test-and-push:
     runs-on: ubuntu-latest
+
+    env:
+      ENVIRONMENT: ${{ github.ref_name }}   # main | dev | test
+      IMAGE_TAG: ${{ github.ref_name }}     # main | dev | test
 
     steps:
       - name: Checkout current repo
@@ -27,17 +33,16 @@ jobs:
       # Instalar Newman
       # -------------------------
       - name: Install Newman
-        run: |
-          npm install -g newman
+        run: npm install -g newman
 
       # -------------------------
-      # Levantar Docker Compose para pruebas
+      # Docker Compose para Tests
       # -------------------------
       - name: Docker Compose Up (Tests Environment)
         run: docker compose -f docker-compose.ci.yml up -d --build
 
       # -------------------------
-      # Esperar servicios
+      # Esperar Product Service
       # -------------------------
       - name: Esperar Product Service
         run: |
@@ -60,16 +65,15 @@ jobs:
           exit 1
 
       # -------------------------
-      # Correr Tests Postman
+      # Tests Postman
       # -------------------------
       - name: Run Synced Backend Tests
         run: |
           newman run backend-tests-postman.json
 
       # -------------------------
-      # Si todo OK → Build & Push
+      # AWS Login
       # -------------------------
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -82,39 +86,46 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
+      # ================================================================
       # PRODUCT SERVICE
+      # ================================================================
+
       - name: Build Product Service image
         run: docker build -t product-service ./product-service
 
       - name: Tag Product Service image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: product-service
-          IMAGE_TAG: latest
+          ECR_REPOSITORY: product-service-${{ env.ENVIRONMENT }}
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: docker tag product-service:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Push Product Service image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: product-service
-          IMAGE_TAG: latest
+          ECR_REPOSITORY: product-service-${{ env.ENVIRONMENT }}
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
+      # ================================================================
       # INVENTORY SERVICE
+      # ================================================================
+
       - name: Build Inventory Service image
         run: docker build -t inventory-service ./inventory-service
 
       - name: Tag Inventory Service image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: inventory-service
-          IMAGE_TAG: latest
+          ECR_REPOSITORY: inventory-service-${{ env.ENVIRONMENT }}
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: docker tag inventory-service:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Push Inventory Service image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: inventory-service
-          IMAGE_TAG: latest
+          ECR_REPOSITORY: inventory-service-${{ env.ENVIRONMENT }}
+          IMAGE_TAG: ${{ env.IMAGE_TAG }}
         run: docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
 
