--- a/.github/workflows/CD-Backend.yml
+++ b/.github/workflows/CD-Backend.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
+    env:
+      ENVIRONMENT: ${{ github.event.workflow_run.head_branch }}   # main | dev | test
+
     steps:
       # ------------------------
       # CHECKOUT DEL REPO
@@ -28,42 +31,98 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ secrets.AWS_REGION }}
+name: CD - Deploy backend to EKS
+
+on:
+  workflow_run:
+    workflows: ["CI - Build & Push Backend to ECR"]
+    types:
+      - completed
+
+env:
+  ENVIRONMENT: ${{ github.event.workflow_run.head_branch }}   # main | dev | test
+  IMAGE_TAG: ${{ github.event.workflow_run.head_branch }}     # main | dev | test
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+
+    steps:
+      # ------------------------
+      # CHECKOUT
+      # ------------------------
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
       # ------------------------
-      # OBTENER KUBECONFIG DEL CLUSTER
+      # AWS CREDS
+      # ------------------------
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      # ------------------------
+      # OBTENER CLUSTER DINÁMICO
+      # main  → main-eks-cluster
+      # dev   → dev-eks-cluster
+      # test  → test-eks-cluster
       # ------------------------
       - name: Update kubeconfig
         run: |
+          CLUSTER_NAME="${{ env.ENVIRONMENT }}-eks-cluster"
+          echo "Cluster dinámico: $CLUSTER_NAME"
+
           aws eks update-kubeconfig \
             --region ${{ secrets.AWS_REGION }} \
-            --name ${{ secrets.EKS_CLUSTER }}
+            --name "$CLUSTER_NAME"
 
       # ------------------------
-      # CREAR NAMESPACE SOLO SI NO EXISTE
+      # NAMESPACE SI NO EXISTE
       # ------------------------
       - name: Create namespace if not exists
         run: |
           kubectl get ns microservices || kubectl create ns microservices
 
       # ------------------------
-      # APLICAR MANIFIESTOS NECESARIOS
+      # SUSTITUIR VARIABLES EN MANIFESTS (.envsubst)
+      # IMAGE = ${ECR_REGISTRY}/service-${ENVIRONMENT}:latest
       # ------------------------
-      - name: Apply specific manifests
-        run: |   
-          kubectl apply -n microservices -f k8s/redis
-          kubectl apply -n microservices -f k8s/postgres
-          kubectl apply -n microservices -f k8s/inventory-service
-          kubectl apply -n microservices -f k8s/product-service
-        
+      - name: Prepare manifests with ENV variables
+        env:
+          ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+        run: |
+          mkdir rendered
+
+          for file in k8s/*/*.yaml; do
+            echo "Procesando $file"
+            envsubst < "$file" > "rendered/$(basename $file)"
+          done
+
       # ------------------------
-      # NOTIFICACIÓN CON LAMBDA
+      # APLICAR MANIFESTS RENDERIZADOS
+      # ------------------------
+      - name: Apply manifests
+        run: |
+          kubectl apply -n microservices -f rendered
+
+      # ------------------------
+      # NOTIFICAR LAMBDA DEL AMBIENTE
+      # pipeline-notify-main | dev | test
       # ------------------------
       - name: Notificar Lambda
         run: |
+          LAMBDA_NAME="pipeline-notify-${{ env.ENVIRONMENT }}"
+
           aws lambda invoke \
-          --function-name pipeline-notify-default \
-          --invocation-type RequestResponse \
-          --payload '{"message":"El pipeline termino con exito"}' \
-          --cli-binary-format raw-in-base64-out \
-          response.json
-          
+            --function-name "$LAMBDA_NAME" \
+            --invocation-type RequestResponse \
+            --payload '{"message":"Backend desplegado correctamente"}' \
+            --cli-binary-format raw-in-base64-out \
+            response.json
+
+
