--- a/.github/workflows/CD-Frontend.yml
+++ b/.github/workflows/CD-Frontend.yml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
+    env:
+      ENVIRONMENT: ${{ github.event.workflow_run.head_branch }}   # main | dev | test
+      CLUSTER_NAME: ${{ github.event.workflow_run.head_branch }}-eks-cluster
+      LAMBDA_NAME: pipeline-notify-${{ github.event.workflow_run.head_branch }}
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -31,9 +36,10 @@ jobs:
       # ------------------------
       - name: Update kubeconfig
         run: |
+          echo "Usando cluster: $CLUSTER_NAME"
           aws eks update-kubeconfig \
             --region ${{ secrets.AWS_REGION }} \
-            --name ${{ secrets.EKS_CLUSTER }}
+            --name $CLUSTER_NAME
 
       # ------------------------
       # CREAR NAMESPACE SOLO SI NO EXISTE
@@ -46,6 +52,11 @@ jobs:
       # APLICAR MANIFIESTOS DEL FRONTEND
       # ------------------------
       - name: Deploy Frontend (API Gateway)
+        env:
+          ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
         run: |
-          kubectl apply -n microservices -f k8s/api-gateway
+          echo "Aplicando manifests del entorno: $ENVIRONMENT"
+          sed -i "s|\${ECR_REGISTRY}|$ECR_REGISTRY|g" k8s/api-gateway/deployment.yaml
+          sed -i "s|\${ENVIRONMENT}|$ENVIRONMENT|g" k8s/api-gateway/deployment.yaml
 
+          kubectl apply -n microservices -f k8s/api-gateway
