--- a/.github/workflows/CD-Backend.yml
+++ b/.github/workflows/CD-Backend.yml
@@ -54,10 +54,15 @@ jobs:
       # -----------------------------
       - name: Reemplazar variables en manifests
         run: |
-          for file in $(find k8s -type f -name "*.yaml"); do
-            sed -i "s|${ENVIRONMENT}|${ENVIRONMENT}|g" "$file"
-            sed -i "s|${AWS_ACCOUNT}|${AWS_ACCOUNT}|g" "$file"
-          done
+          if [ -z "${ENVIRONMENT}" ]; then
+            echo "ERROR: ENVIRONMENT está vacío"
+            exit 1
+          fi
+        
+            find k8s -type f -name "*.yaml" -print0 | while IFS= read -r -d '' file; do
+              sed -i "s|${ENVIRONMENT}|${ENVIRONMENT}|g" "$file"
+              sed -i "s|${AWS_ACCOUNT}|${AWS_ACCOUNT}|g" "$file"
+            done
 
       # -----------------------------
       # APPLY MANIFESTS
