--- a/.github/workflows/CD-Backend.yml
+++ b/.github/workflows/CD-Backend.yml
@@ -53,16 +53,14 @@ jobs:
       # REEMPLAZAR VARIABLES EN MANIFESTS
       # -----------------------------
       - name: Reemplazar variables en manifests
+        env:
+          AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT_ID }}
+          ENVIRONMENT: ${{ env.ENVIRONMENT }}
         run: |
-          if [ -z "${ENVIRONMENT}" ]; then
-            echo "ERROR: ENVIRONMENT está vacío"
-            exit 1
-          fi
-        
-            find k8s -type f -name "*.yaml" -print0 | while IFS= read -r -d '' file; do
-              sed -i "s|${ENVIRONMENT}|${ENVIRONMENT}|g" "$file"
-              sed -i "s|${AWS_ACCOUNT}|${AWS_ACCOUNT}|g" "$file"
-            done
+          find k8s -type f -name "*.yaml" -print0 | while IFS= read -r -d '' file; do
+            sed -i "s|\${AWS_ACCOUNT}|${AWS_ACCOUNT}|g" "$file"
+            sed -i "s|\${ENVIRONMENT}|${ENVIRONMENT}|g" "$file"
+          done
 
       # -----------------------------
       # APPLY MANIFESTS
