--- a/.github/workflows/CD-Backend.yml
+++ b/.github/workflows/CD-Backend.yml
@@ -54,7 +54,7 @@ jobs:
       # -----------------------------
       - name: Reemplazar variables en manifests
         env:
-          AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT_ID }}
+          AWS_ACCOUNT: ${{ secrets.AWS_ACCOUNT}}
           ENVIRONMENT: ${{ env.ENVIRONMENT }}
         run: |
           find k8s -type f -name "*.yaml" -print0 | while IFS= read -r -d '' file; do
