--- a/.github/workflows/CD-Backend.yml
+++ b/.github/workflows/CD-Backend.yml
@@ -76,10 +76,12 @@ jobs:
       # LAMBDA NOTIFICATION
       # -----------------------------
       - name: Notificar Lambda
+        env:
+          ENVIRONMENT: ${{ env.ENVIRONMENT }}
         run: |
           aws lambda invoke \
             --function-name ${{ steps.names.outputs.lambda_name }} \
             --invocation-type RequestResponse \
-            --payload '{"message":"Pipeline finalizado con éxito"}' \
+            --payload "{\"message\":\"Pipeline finalizado con Ã©xito en ${ENVIRONMENT}\"}" \
             --cli-binary-format raw-in-base64-out \
             response.json
